# electro_market

./: .env.sample  README.md  pyproject.toml
config/: settings.py  urls.py
retail_network/: urls.py  views.py
